added variables to build.gradle to allow for variables to come from a gradle.properties file or an env var.

--- a/build.gradle
+++ b/build.gradle
@@ -108,6 +108,9 @@ artifacts {
     archives sourcesJar
 }
 
+def ossrhUser = hasProperty('ossrhUsername') ? ossrhUsername : System.getenv('ossrhUsername')
+def ossrhPass = hasProperty('ossrhPassword') ? ossrhPassword : System.getenv('ossrhPassword')
+
 uploadArchives {
     repositories {
         //noinspection GroovyAssignabilityCheck
@@ -115,11 +118,11 @@ uploadArchives {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                authentication(userName: ossrhUser, password: ossrhPass)
             }
 
             snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
+                authentication(userName: ossrhUser, password: ossrhPass)
             }
 
             pom.project {
