Added additional intergration test exclusion to the build.gradle file.

--- a/build.gradle
+++ b/build.gradle
@@ -113,14 +113,13 @@ artifacts {
     archives sourcesJar
 }
 
-
 test {
     if (skipIntTests) {
         exclude '**/DataSetIntegrationTests.class'
         exclude '**/SessionIntegrationTests.class'
+        exclude '**/ImportIntegrationTests.java'
     }
 }
-
 
 uploadArchives {
     repositories {
