--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-joda', version: '2.8.8'
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.1'
+    compile group: 'com.neovisionaries', name: 'nv-i18n', version: '1.22'
 }
 
 repositories {
