--- a/build.gradle
+++ b/build.gradle
@@ -43,10 +43,14 @@ dependencies {
     testCompile group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.6'
     compile group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.8.8'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-joda', version: '2.8.8'
     compile group: 'org.apache.commons', name: 'commons-csv', version: '1.1'
     compile group: 'com.neovisionaries', name: 'nv-i18n', version: '1.22'
+    compile group: 'com.google.http-client', name: 'google-http-client', version: '1.22.0'
+    compile group: 'com.google.http-client', name: 'google-http-client-jackson2', version: '1.22.0'
+
+
+
 }
 
 repositories {
